# survey-analysis-core

./: CHANGELOG.md  README.md  pyproject.toml
claude-code/: README.md
claude-code/agents/: survey-analysis-agent.template.md
claude-code/commands/: survey-analysis.template.md
claude-code/rules/: survey-statistical-analysis.md
claude-code/skills/: survey-analysis.template.md
examples/cocoon-config/: README.md  config.py
google-forms-generator/: FormGenerator.template.gs  README.md  ResponseAggregator.template.gs
src/survey_analysis/: __init__.py
src/survey_analysis/base/: __init__.py  config.py  report.py
src/survey_analysis/core/: __init__.py  audit.py  crosstab.py  loader.py  stats.py  text.py  viz.py
src/survey_analysis/utils/: __init__.py  parsers.py
tests/: conftest.py  test_config.py  test_crosstab.py  test_loader.py  test_stats.py
